@@ -1,3 +1,7 @@
+Bug Fixes :
+
+* Fixed crashes caused by calling PrimitiveEvaluator.create( None ) in Python, replacing them with ValueError exceptions.
+
 7.10.1 :
 
 Improvements :
